--- a/.env.zomro
+++ b/.env.zomro
@@ -12,3 +12,6 @@ FLASK_DEBUG=False
 # Configuration pour la connexion réseau
 # Augmenter les délais d'attente pour les réseaux lents
 REQUESTS_TIMEOUT=60
+
+# Utiliser le port 8080 au lieu de 5000
+PORT=8080
