--- a/.env.zomro
+++ b/.env.zomro
@@ -6,12 +6,13 @@ FLASK_SECRET_KEY=hrzdsdcvdbapmwlskneiu
 SERVICE_ACCOUNT_FILE=/var/www/killer/service_account.json
 SHEET_ID=1ZIiFg_BA7fgpMJfb_s-BmOs_idm3Px_2zWqJ3DLh-dY
 
-# Configuration pour le debug (à désactiver en production)
+# Configuration pour le debug
 FLASK_DEBUG=False
+
+# Configuration pour les sessions
+SESSION_FILE_DIR=/var/www/killer/flask_session
+FLASK_ENV=production
 
 # Configuration pour la connexion réseau
 # Augmenter les délais d'attente pour les réseaux lents
 REQUESTS_TIMEOUT=60
-
-# Utiliser le port 8080 au lieu de 5000
-PORT=8080
