--- a/killer.service
+++ b/killer.service
@@ -5,12 +5,17 @@ After=network.target
 [Service]
 User=root
 WorkingDirectory=/var/www/killer
-ExecStart=/usr/local/bin/gunicorn -b 0.0.0.0:8080 server:app --workers 3 --timeout 60
+ExecStart=/usr/local/bin/gunicorn -b 0.0.0.0:5000 server:app --workers 3 --timeout 60
 Restart=always
 StandardOutput=file:/var/log/killer.log
 StandardError=file:/var/log/killer.error.log
 Environment="SERVICE_ACCOUNT_FILE=/var/www/killer/service_account.json"
 Environment="SHEET_ID=1ZIiFg_BA7fgpMJfb_s-BmOs_idm3Px_2zWqJ3DLh-dY"
+Environment="FLASK_SECRET_KEY=hrzdsdcvdbapmwlskneiu"
+Environment="SESSION_FILE_DIR=/var/www/killer/flask_session"
+Environment="FLASK_ENV=production"
+Environment="USE_CACHE_ON_ERROR=true"
+Environment="FLASK_DEBUG=False"
 
 [Install]
 WantedBy=multi-user.target
