--- a/killer.service
+++ b/killer.service
@@ -5,8 +5,10 @@ After=network.target
 [Service]
 User=root
 WorkingDirectory=/var/www/killer
-ExecStart=/usr/local/bin/gunicorn -b 0.0.0.0:5000 server:app --workers 3 --timeout 60
+Environment="PYTHONUNBUFFERED=1"
+ExecStart=/var/www/killer/.venv/bin/python server.py
 Restart=always
+RestartSec=5
 StandardOutput=file:/var/log/killer.log
 StandardError=file:/var/log/killer.error.log
 Environment="SERVICE_ACCOUNT_FILE=/var/www/killer/service_account.json"
