--- a/.env
+++ b/.env
@@ -2,4 +2,10 @@ FLASK_SECRET_KEY=hrzdsdcvdbapmwlskneiu
 SERVICE_ACCOUNT_FILE=service_account.json
 SHEET_ID=1ZIiFg_BA7fgpMJfb_s-BmOs_idm3Px_2zWqJ3DLh-dY
 PORT=8080
-GOOGLE_CONNECTIVITY_TIMEOUT = 10
+GOOGLE_CONNECTIVITY_TIMEOUT=10
+
+SMTP_SERVER=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=charles.bergeat@gmail.com
+SMTP_PASSWORD=iktcbwssjhqcbkrv
+FROM_NAME=Nyhllö
