final final finallll2

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ SMTP_PORT=587
 SMTP_USER=charles.bergeat@gmail.com
 SMTP_PASSWORD=iktcbwssjhqcbkrv
 FROM_NAME=Nyhllö
+FROM_EMAIL=charles.bergeat@gmail.com         # ➕ Manquant (email d'envoi)
